# Projet_Image_M1_COMBOT_AMSALHEM_Compression_basee_super_pixels

./: README.md
Code/SDL2/Assets/: imagetest.ppm
Code/SDL2/include/: GUI.h  ImageBase.h  SLIC.h  Window.h
Code/SDL2/others/: SLIC.cpp  a.out
Code/SDL2/src/: GUI.cpp  Save  Window.cpp  main.cpp  test
Code/SDL2/src/tests/: Centres.ppm  Gradient.pgm  apresSLIC.ppm  avantSLIC.ppm  main.cpp
Code/SLIC/: 1.ppm  1c.ppm  2.ppm  2c.ppm  3.ppm  3c.ppm  CMakeLists.txt  ImgOut_RegularGrid.ppm  L.pgm  RGB.ppm  RegularGrid.cpp  SLIC.cpp  SLICandMerge.cpp  Slic.cpp  Y.pgm  Z.pgm  a.out  a.pgm  b.pgm  convert_topng.sh  ex  indice.pgm  t.ppm  testPal.ppm
Code/SLIC/Images/: Clock.ppm  Kermit.ppm  KermitGrid8x8.ppm  KermitSLIC8x8.ppm  image.ppm  image_test.pgm  image_test.ppm
Code/SLIC/Include/: ImageBase.cpp  ImageBase.hpp
Code/SLIC/SLIC/: RegularGrid.cpp  SDL.cpp  SLIC  Slic.cpp  SlicTest.txt  Slic_copy.cpp  a.out
